@@ -1496,7 +1496,11 @@
 (defconst epackage-version "1.5"
   "Standard Emacs inversion.el supported verison number.")
 
+<<<<<<< HEAD
 (defconst epackage--version-time "2012.0114.1648"
+=======
+(defconst epackage--version-time "2012.0208.0625"
+>>>>>>> c8b27f4... (epackage-cmd-sources-list-upgrade): Call epackage-initialize
   "Package's version number in format YYYY.MMDD.HHMM.")
 
 (defconst epackage--maintainer "jari.aalto@cante.net"
@@ -8459,6 +8463,7 @@ Return:
 If optional VERBOSE is non-nil, display progress messages."
   (interactive
    (list 'interactive))
+  (epackage-initialize verbose)
   (epackage-kill-buffer-sources-list)
   (unless (epackage-sources-list-p)
     (epackage-with-message verbose "Wait, downloading sources list"))
